small updates and Articles added
