# app/Http/Controllers/ArticleController.php
@@ -2,22 +2,22 @@
 
 namespace App\Http\Controllers;
 
-use App\Models\Step;
-use App\Models\Tutorial;
+use App\Models\Article;
+use App\Models\Project;
 use Illuminate\Http\Request;
 
-class StepsController extends Controller
+class ArticleController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/api/tutorials/{tutorialId}/steps",
-     *     tags={"Step"},
-     *     operationId="api.steps.index",
-     *     summary="Returns list of availble steps for a tutorial",
-     *     description="Returns list of availble steps for a tutorial",
+     *     path="/api/projects/{projectId}/articles",
+     *     tags={"Article"},
+     *     operationId="api.articles.index",
+     *     summary="Returns list of availble articles for a project",
+     *     description="Returns list of availble articles for a project",
      *     @OA\Parameter(
-     *          name="tutorialId",
-     *          description="Id of Tutorial",
+     *          name="projectId",
+     *          description="Id of Project",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -47,21 +47,21 @@ class StepsController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-    public function index(Tutorial $tutorial)
+    public function index(Project $project)
     {
-        return $tutorial->steps->loadMissing(['tutorial.project']);
+        return $project->articles->loadMissing(['project']);
     }
 
     /**
      * @OA\Post(
-     *     path="/api/tutorials/{tutorialId}/steps",
-     *     tags={"Step"},
-     *     operationId="api.steps.store",
-     *     summary="Store new Step for a Tutorial",
-     *     description="Store new Step for a Tutorial",
+     *     path="/api/projects/{projectId}/articles",
+     *     tags={"Article"},
+     *     operationId="api.articles.store",
+     *     summary="Store new Article for a project",
+     *     description="Store new Article for a project",
      *     @OA\Parameter(
-     *          name="tutorialId",
-     *          description="Id of Tutorial",
+     *          name="projectId",
+     *          description="Id of Project",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -70,27 +70,21 @@ class StepsController extends Controller
      *      ),
      *     @OA\RequestBody(
      *         required=true,
-     *         description="Step payload",
+     *         description="Article payload",
      *         @OA\JsonContent(
      *          @OA\Property(
      *              property="title",
-     *              description="Step title",
+     *              description="Article title",
      *              type="string",
-     *              example="My New Step",
+     *              example="My New Article",
      *              minLength=1,
      *              maxLength=255
      *          ),
      *          @OA\Property(
-     *              property="order",
-     *              description="Step order",
-     *              type="integer",
-     *              example="1",
-     *          ),
-     *          @OA\Property(
      *              property="content",
-     *              description="Step content",
+     *              description="Article content",
      *              type="array",
-     *              example={{"type": "heading-one","children": {{"text": "Article title"}}},},
+     *              example={{"type": "heading-one","children": {{"text": "Article title"}}},{"type": "paragraph","children": {{"text": "This is editable","bold": true,"italic": true}}},{"type": "bulleted-list","children": {{"type": "list-item","children":{{"text": "test"}}}}}},
      *              @OA\Items(
      *                  @OA\Property(
      *                      property="type",
@@ -136,26 +130,25 @@ class StepsController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
-    public function store(Request $request, Tutorial $tutorial)
+    public function store(Request $request, Project $project)
     {
-        return Step::firstOrCreate([
+        return Article::firstOrCreate([
             'title' => $request->title,
-            'order' => $request->order,
             'content' => $request->input('content'),
-            'tutorial_id' => $tutorial->id
+            'project_id' => $project->id
         ]);
     }
 
     /**
      * @OA\Get(
-     *      path="/api/steps/{id}",
-     *      operationId="api.steps.show",
-     *      tags={"Step"},
-     *      summary="Get Step",
-     *      description="Get specific Step",
+     *      path="/api/articles/{id}",
+     *      operationId="api.articles.show",
+     *      tags={"Article"},
+     *      summary="Get Article",
+     *      description="Get specific Article",
      *      @OA\Parameter(
      *          name="id",
-     *          description="Id of Step",
+     *          description="Id of Article",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -190,23 +183,23 @@ class StepsController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function show(Step $step)
+    public function show(Article $article)
     {
-        return $step->loadMissing(['tutorial.project']);
+        return $article->loadMissing(['project']);
     }
 
     /**
      * @OA\Patch(
-     *     path="/api/steps/{id}",
-     *     tags={"Step"},
-     *     operationId="api.steps.update",
-     *     summary="Update Step",
-     *     description="Update existing Step",
+     *     path="/api/articles/{id}",
+     *     tags={"Article"},
+     *     operationId="api.articles.update",
+     *     summary="Update Article",
+     *     description="Update existing Article",
      *     @OA\Parameter(
      *         in="path",
      *         name="id",
      *         required=true,
-     *         description="Updated Step identifier",
+     *         description="Updated Article identifier",
      *         example=1,
      *         @OA\Schema(
      *             type="integer"
@@ -214,28 +207,22 @@ class StepsController extends Controller
      *      ),
      *     @OA\RequestBody(
      *         required=true,
-     *         description="Step payload",
+     *         description="Article payload",
      *         @OA\JsonContent(
      *          @OA\Property(
      *              property="title",
-     *              description="Step title",
+     *              description="Article title",
      *              type="string",
-     *              example="My New Step",
+     *              example="My New Article",
      *              minLength=1,
      *              maxLength=255
      *          ),
      *          @OA\Property(
-     *              property="order",
-     *              description="Step order",
-     *              type="integer",
-     *              example="1",
-     *          ),
-     *          @OA\Property(
      *              property="content",
-     *              description="Step content",
+     *              description="Article content",
      *              type="string",
-     *              example={{"type": "heading-one","children": {{"text": "Article title"}}},},
-     *          )
+     *              example={{"type": "heading-one","children": {{"text": "Article title"}}},{"type": "paragraph","children": {{"text": "This is editable","bold": true,"italic": true}}},{"type": "bulleted-list","children": {{"type": "list-item","children":{{"text": "test"}}}}}},
+     *          ),
      *         ),
      *     ),
      *     @OA\Response(
@@ -260,38 +247,34 @@ class StepsController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function update(Request $request, Step $step)
+    public function update(Request $request, Article $article)
     {
         if (!empty($request->title)) {
-            $step->title = $request->title;
-        }
-
-        if (!empty($request->order)) {
-            $step->order = $request->order;
+            $article->title = $request->title;
         }
 
         $content = $request->input('content');
         if (!empty($content)) {
-            $step->content = $content;
+            $article->content = $content;
         }
 
-        $step->save();
+        $article->save();
 
-        return $step;
+        return $article;
     }
 
     /**
      * @OA\Delete(
-     *     path="/api/steps/{id}",
-     *     tags={"Step"},
-     *     operationId="api.steps.destroy",
-     *     summary="Delete Step by identifier",
-     *     description="Delete Step by identifier",
+     *     path="/api/articles/{id}",
+     *     tags={"Article"},
+     *     operationId="api.articles.destroy",
+     *     summary="Delete Article by identifier",
+     *     description="Delete Article by identifier",
      *      @OA\Parameter(
      *         in="path",
      *         name="id",
      *         required=true,
-     *         description="Step identifier",
+     *         description="Article identifier",
      *         example=1,
      *         @OA\Schema(
      *             type="integer"
@@ -318,8 +301,8 @@ class StepsController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function destroy(Step $step)
+    public function destroy(Article $article)
     {
-        return $step->delete();
+        return $article->delete();
     }
 }
